fix body to Base64